Added the example page that showcases how new image resources can be generated on the fly.

--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     compile "com.sysgears.grain:grain:$project.grainVersion"
 
     compile 'org.codehaus.groovy:groovy:2.1.2'
+    compile 'net.sourceforge.plantuml:plantuml:8033'
 }
 
 sourceSets {
